PRODEV-1384. Fix full screen height on mobile

--- a/src/components/RideTo/GettingStarted/Splash/styles.scss
+++ b/src/components/RideTo/GettingStarted/Splash/styles.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: calc(100vh - 56px);
+  // height: calc(100vh - 56px);
   min-height: 320px;
   padding: 2rem;
   background-size: cover;
@@ -32,11 +32,11 @@
   }
 
   @media (min-width: 801px) {
-    height: calc(100vh - 80px);
+    // height: calc(100vh - 80px);
   }
 
   @media (min-width: 933px) {
-    height: calc(100vh - 80px - 89px);
+    // height: calc(100vh - 80px - 89px);
   }
 }
 
